Updated exercise for Discrete

--- a/Discrete Lab Exe.ipynb
+++ b/Discrete Lab Exe.ipynb
@@ -209,7 +209,336 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Permutations"
+    "## Create a permutation function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will create a function that is called permutation. This is a function that we create to list down all the permutation that a list can have."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function will take a variable called **lists**\n",
+    "\n",
+    "This is an example of recursion function that you have seen in *Data Structure and Algorithm* courses that will call itself.\n",
+    "\n",
+    "The stopper of the recursion function is that it will return an empty **[]** when the length of the lists is 0 or and list of itself **[lists]** when the length of the lists is 1.\n",
+    "\n",
+    "Next, there will be a loop that will go through the lists sent in parameters.\n",
+    "\n",
+    "In each loop, the function will  create two new lists:\n",
+    "\n",
+    "One is called indexList that will be the item at currentIndex inside a list.\n",
+    "Another is called remaining , which will contains all the remaining item of the list , from the left part and the right part of the list\n",
+    "\n",
+    "Example, for [1,2,3,4] , \n",
+    "\n",
+    "For index 0, currentIndex will be [1] and remaining will be [2,3,4]\n",
+    "For index 1, currentIndex will be [2] and remaining will be [1,3,4]\n",
+    "\n",
+    "This repeated through recursion, and the function will call itself, once done it will append all the possibility permutation inside the list answer.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Complete the function permutation below based on the explanation of code given"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _________(______):\n",
+    "\n",
+    "\t# Stopper of the recursion function\n",
+    "\n",
+    "\tif len(lists) == 0:\n",
+    "\t\treturn ____\n",
+    "\n",
+    "\tif ________ :\n",
+    "\t\treturn [lists]\n",
+    "\n",
+    "\t# This is the looping part\n",
+    "\tanswer = []\n",
+    "\n",
+    "\tfor i in range(0, ________):\n",
+    "\t\tindexList = ___________\n",
+    "\t\tremaining = ____________\n",
+    "\n",
+    "\t\tfor p in _________(remaining):\n",
+    "\t\t\tanswer.append(indexList+p)\n",
+    "\treturn ______"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Call the function created above my passing the following list in parameters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myList = [2,5,8,10,14]\n",
+    "\n",
+    "# Call the function created\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Built in permutation and combination function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Python, there is a module that is called itertools that can be used for all items related to permutations and combinations. We will now use the methods from the modules to list down all the possible combination and permutation from a given list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To start you will need to import permutation from itertools library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import permutations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then create a list of numbers where you wish to see all the possible permutations, call it myList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myList = [1,2,3,4]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Call the function permutations by passing myList in parameter and iterate through the result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4)\n",
+      "(1, 2, 4, 3)\n",
+      "(1, 3, 2, 4)\n",
+      "(1, 3, 4, 2)\n",
+      "(1, 4, 2, 3)\n",
+      "(1, 4, 3, 2)\n",
+      "(2, 1, 3, 4)\n",
+      "(2, 1, 4, 3)\n",
+      "(2, 3, 1, 4)\n",
+      "(2, 3, 4, 1)\n",
+      "(2, 4, 1, 3)\n",
+      "(2, 4, 3, 1)\n",
+      "(3, 1, 2, 4)\n",
+      "(3, 1, 4, 2)\n",
+      "(3, 2, 1, 4)\n",
+      "(3, 2, 4, 1)\n",
+      "(3, 4, 1, 2)\n",
+      "(3, 4, 2, 1)\n",
+      "(4, 1, 2, 3)\n",
+      "(4, 1, 3, 2)\n",
+      "(4, 2, 1, 3)\n",
+      "(4, 2, 3, 1)\n",
+      "(4, 3, 1, 2)\n",
+      "(4, 3, 2, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in permutations(myList):\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now you will call from the same module, a function combinations . To recall, the function combination is as follows:\n",
+    "\n",
+    "![Formula combination](https://cdn1.byjus.com/wp-content/uploads/2020/03/Combination-Formula.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function combination in Python will take this time two parameters, the first parameter is the list of elements, and the second parameter is the size of each permutation. Call the function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "lists = [1,2,3,4]\n",
+    "\n",
+    "# Put in your answer here\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Probability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Python, from the random module there is a  random() that will generate a random number between 0-1. Play the below code repeatedly and see the random number generated every time is different"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.22257023706337098\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import random\n",
+    "\n",
+    "print(random())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will now, create a coin toss example, where it will return Head or tail based on the random number generated. Add the logic as follows:\n",
+    "\n",
+    "|Number Generated|Coin face|\n",
+    "|--- | ---|\n",
+    "|0 < 0.5 | Head|\n",
+    "|0.5 < 1 | Tail|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the logic define above, reate a function coin toss so that later you can call it multiple times that you wish.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Call this function 10 times and see for every time what is the number of occurence that head appears and number of occurence that tails appear."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function below will help you to group all the answers into a dictionary and it will help you to see how many times each of the choice \"head\" or \"tail\" appears. Run the following code, and change the value of range from 10,100,1000,10000 and 100000 and notes the value for each time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'coin_toss' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-28b33de81884>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcoin_toss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"Head\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m                 \u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"head\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"head\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'coin_toss' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "results = {\"head\":0,\"tail\":0}\n",
+    "\n",
+    "for i in range(0,10):\n",
+    "\tresult = coin_toss()\n",
+    "\tif result == \"Head\":\n",
+    "\t\tresults[\"head\"] = results[\"head\"]+1\n",
+    "\telse:\n",
+    "\t\tresults[\"tail\"] = results[\"tail\"]+1\n",
+    "\n",
+    "print(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now you will create  a function from scratch, that will randomly simulate a dice behaviour. Use what you have seen previously with the coin toss to create a launch_dice function, and run this function 10, 100, 1000 , 10 000 and 100000 and see how many times each of the value appears. "
    ]
   },
   {
